package org.binu.data;

/**
 * Cell Colours for occupied rows.
 */
public enum CellColour {
    RED,
    BLUE,
    GREEN,
    PURPLE,
    YELLOW
}
