package org.binu.data;

/**
 * Enum indicating a cell status
 */
public enum CellStatus {
    EMPTY,
    BLOCKED,
    OCCUPIED
}
