@startuml

hide empty fields
hide empty methods

class GameManager {
    - Board board
    - GameAI gameAI
}

class Board {
    - WIDTH = 6
    - HEIGHT = 12
    - Cell [][]
    + Board currentState()
}

class Cell {
    - CellStatus cellStatus
    - CellColour cellColour
}

enum CellStatus {
    EMPTY
    BLOCKED
    COLOUR
}

enum CellColour {
    RED = 1
    BLUE
    GREEN
    PURPLE
    YELLOW
}

class GameAI {

}

Cell ..> CellColour
Cell ..> CellStatus
Board ..> Cell
GameManager --l> Board
GameManager --> GameAI

note bottom of GameAI: Gets current board state from \
\nGame manager and returns \
\nnext move

@enduml